# motion-fx

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.txt  installer.applescript  release.sh
.github/workflows/: doxygen.yml
docs/: architecture.md  build_guide.md  dependencies.md  doxy_mainpage.md  example_input_videos.md  user_guide.md
docs/dev/: readinglist.md
docs/dev/journal/: 2025-10-29.md  2025-11-12.md  2025-11-26.md  2025-12-03.md  2025-12-17.md  2026-01-07.md  2026-01-28.md  2026-02-11.md  2026-02-18.md  2026-03-04.md  2026-03-11.md  2026-03-26.md  2026-04-02.md
docs/doxygen/: Doxyfile
src/: CMakeLists.txt  controller.cpp  controller.hpp  parameterdefaults.hpp  pluginfactory.cpp  processor.cpp  processor.hpp  utils.hpp  windllload.cpp
src/audio/: modulationcurve.hpp  parameterextraction.hpp  processor.cpp  processor.hpp
src/audio/effects/: ieffect.hpp  morphfilter.cpp  morphfilter.hpp  noisemaker.cpp  noisemaker.hpp  ringmodulator.cpp  ringmodulator.hpp  saturationexciter.cpp  saturationexciter.hpp  spatialecho.cpp  spatialecho.hpp  wavepanner.cpp  wavepanner.hpp  wavephaser.cpp  wavephaser.hpp
src/resources/: viewGUI.uidesc  win32resource.rc
src/ui/: buttonactioncontroller.hpp  fileselectcontroller.hpp  mediaview.cpp  mediaview.hpp  mediaviewcreator.cpp  motionfxeditor.hpp  visimusiceditor.hpp
src/video/: framequeue.hpp  frameticker.cpp  frameticker.hpp  iframereceiver.hpp  medialoader.cpp  medialoader.hpp  playbackcontroller.cpp  playbackcontroller.hpp  videoframe.hpp  videoparamlistener.cpp  videoparamlistener.hpp
src/video/decoders/: imagedecoder.cpp  imagedecoder.hpp  videodecoder.cpp  videodecoder.hpp
src/video/features/: asyncframeworker.hpp  brightnessfeatureextractor.cpp  brightnessfeatureextractor.hpp  colorfeatureextractor.cpp  colorfeatureextractor.hpp  depthfeatureextractor.cpp  depthfeatureextractor.hpp  ifeatureextractor.hpp  ifeaturesink.hpp  motionfeatureextractor.cpp  motionfeatureextractor.hpp  saturationfeatureextractor.cpp  saturationfeatureextractor.hpp  visionutils.hpp
tests/: CMakeLists.txt  test_ieffectcommon.cpp  test_morphfilter.cpp  test_noisemaker.cpp  test_ringmodulator.cpp  test_saturationexciter.cpp  test_wavephaser.cpp  testinghelpers.hpp
